# docusau-rs

./: .gitignore  Cargo.toml  PROOF.md  package-lock.json  package.json  tsconfig.json
crates/docusaurus/: Cargo.toml  build.rs
crates/docusaurus-node/: Cargo.toml  package-lock.json  package.json
crates/docusaurus-node/src/: lib.rs
crates/docusaurus/src/: bridge.rs  compile.rs  config.rs  error.rs  lib.rs  main.rs  runner.rs
crates/docusaurus/tests/: bridge_test.rs  compile_test.rs  config_test.rs
shim/: runner.ts
