[package]
name = "docusaurus"
description = "Drop-in Docusaurus CLI with Rust-native config (docusaurus.config.rs)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "docusaurus"
path = "src/main.rs"

[lib]
name = "docusaurus"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
tempfile = "3"
thiserror = "2"
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
